Change log for Stellar Mayhem


IArena sprite atlas getters return const FDaylonSpriteAtlas& instead of 
UDaylonSpriteWidgetAtlas*, since the latter was just a thin wrapper 
around the former. IArena users don't need to know about UDaylonSpriteWidgetAtlas.

Replaced IArena& arguments to play object methods and their collections' methods
with an IArena* class member which is initialized after object creation, 
so the calling code is less verbose.

Moved SDaylonLineParticles code to its own files.

Explosion spawn parameters consolidated into FDaylonParticlesParams, 
spawn callers now use mostly static const vars of that type.
Same for shield explosions.


Version 1.8.4
-------------------------------------------------------------------------------------
Refactored the various helper classes to use IArena instead of UPlayViewBase, 
so that they don't depend on any particular implementation of the game, 
and UPlayViewBase doesn't have to make the helpers friends or declare needed 
members public.


Version 1.8.3
-------------------------------------------------------------------------------------
Miniboss explosions show their shields fragmenting and dispersing
instead of just immediately disappearing.


Version 1.8.2
-------------------------------------------------------------------------------------
Minibosses change heading every second or two. They also fire 
at the player, randomly at first, then more accurately as time goes by.
Two-shield boss has its own ship sprite.

The sound loop for the classic enemy ships grows quieter over time.


Version 1.8.1
-------------------------------------------------------------------------------------
Intro title graphics are animated.

Daylon::FinishCreating was renamed to Daylon::Install, 
because the function installs a created widget into
the scenegraph (and sets some related slot properties).

Daylon::DestroyXXX was renamed Daylon::UninstallXXX, 
because it only removed the widget from the scenegraph